--- a/Admin/adminprofile.html
+++ b/Admin/adminprofile.html
@@ -72,9 +72,9 @@
                     </ul>
                 </div>
                 <div class="login-area col-md-2">
-                    <button class="search-btn btn">
+                    <!-- <button class="search-btn btn">
                         <i class="search-icon ti-search"></i>
-                    </button>
+                    </button> -->
                         <div class="account-wrapper">
                             <img src="img/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
