--- a/Admin/movie.html
+++ b/Admin/movie.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_orange.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="css/movie.css">
     <!--
@@ -74,9 +75,6 @@
                 </ul>
             </div>
             <div class="login-area col-md-2">
-                <button class="search-btn btn">
-                    <i class="search-icon ti-search"></i>
-                </button>
                     <div class="account-wrapper">
                         <img src="img/account.png" alt="" class="img-fluid account-img">
                         <ul class="list-group account-list">
@@ -94,9 +92,13 @@
     <div class="line-default"></div>
     <div class="container-fluid wrapper">
         <div class="getdate">
-            <div class="search-key">
-                <input id="" placeholder="Nhập tên phim">
-            </div>
+          <div class="input-box">
+            <input type="text" placeholder="Tìm kiếm...">
+            <span class="icon">
+                <i class="uil uil-search search-icon"></i>
+            </span>
+            <i class="uil uil-times close-icon"></i>
+        </div>
             <button class="report-btn addStaff accordion-toggle " data-bs-toggle="modal" data-bs-target="#addMovie" aria-expanded="false">
                 Thêm
             </button>
@@ -250,7 +252,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -397,7 +399,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -544,7 +546,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -691,7 +693,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -838,7 +840,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -985,7 +987,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -1132,7 +1134,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -1279,7 +1281,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -1426,7 +1428,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -1568,4 +1570,11 @@
             dateFormat: "d-m-Y",
         });
     </script>
+    <script>
+      let inputBox = document.querySelector(".input-box"),
+          searchIcon = document.querySelector(".icon"),
+          closeIcon = document.querySelector(".close-icon");
+      searchIcon.addEventListener("click", () => inputBox.classList.add("open"));
+      closeIcon.addEventListener("click", () => inputBox.classList.remove("open"));
+  </script>
 </body>
