--- a/Admin/staffManagement.html
+++ b/Admin/staffManagement.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="webfonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
@@ -72,9 +73,9 @@
                     </ul>
                 </div>
                 <div class="login-area col-md-2">
-                    <button class="search-btn btn">
+                    <!-- <button class="search-btn btn">
                         <i class="search-icon ti-search"></i>
-                    </button>
+                    </button> -->
                         <div class="account-wrapper">
                             <img src="img/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
@@ -92,8 +93,12 @@
     <div class="line-default"></div>
     <div class="container-fluid wrapper">
         <div class="getdate">
-            <div class="search-content-item">
-                <input id="myID" placeholder="Nhập tên">
+            <div class="input-box">
+                <input type="text" placeholder="Tìm kiếm...">
+                <span class="icon">
+                    <i class="uil uil-search search-icon"></i>
+                </span>
+                <i class="uil uil-times close-icon"></i>
             </div>
             <button class="report-btn addStaff accordion-toggle " data-bs-toggle="modal" data-bs-target="#addStaff" aria-expanded="false">
                 Thêm
@@ -165,7 +170,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -228,7 +233,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -289,7 +294,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -351,7 +356,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -413,7 +418,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -475,7 +480,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -537,7 +542,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -639,7 +644,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content update-box">
                                 <p>Bạn có chắc chắc muốn xóa nhân viên này?</p>
-                                <i class="fa-solid fa-trash-can"></i>
+                                <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
                                 <div class = "option">
                                     <button class = "deleteBtn">Xóa</button>
                                     <button class = "deleteBtn">Hủy</button>
@@ -653,4 +658,11 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        let inputBox = document.querySelector(".input-box"),
+            searchIcon = document.querySelector(".icon"),
+            closeIcon = document.querySelector(".close-icon");
+        searchIcon.addEventListener("click", () => inputBox.classList.add("open"));
+        closeIcon.addEventListener("click", () => inputBox.classList.remove("open"));
+    </script>
 </body>
