completed revenue statistics

--- a/Admin/dailyreport.html
+++ b/Admin/dailyreport.html
@@ -92,7 +92,7 @@
     </div>
 </div>
     <div class="line-default"></div>
-    <div class="container wrapper">
+    <div class="container wrapper" style="max-width: 1140px !important">
         <div class="wrapper-content">
             <div class="row chart">
                 <div class="col-md-5">
@@ -369,3 +369,4 @@
         });
       </script>
 </body>
+</html>
