edited staff, staffProfile

--- a/Staff/staffProfile.html
+++ b/Staff/staffProfile.html
@@ -28,17 +28,29 @@
         <div class="container-fluid  p-4">
             <div class="row align-items-center">
                 <div class="col-md-1"></div>
-                <div class="col-md-2 px-5 py-1">
-                    <a href="staff.html" class = "navbar-brand">
+                <div class="col-md-2 py-1">
+                    <a href="" class = "navbar-brand">
                         <img src="img/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-6"></div>
-    
-                <div class="login-area col-md-3">
-                    <button class="search-btn btn">
-                        <i class="search-icon ti-search"></i>
-                    </button>
+                <div class="col-md-7">
+                    <ul class="list-gr-1 list-group list-group-horizontal">
+                        <li class="list-group-item movie-area">
+                            <a href="staff.html">
+                                Trang chủ
+                                <i class="ti-angle-down down-btn"></i>
+                            </a>                             
+                        </li>
+
+                        <li class="list-group-item movie-area">
+                            <a href="staffProfile.html">
+                                Tài khoản
+                                <i class="ti-angle-down down-btn"></i>
+                            </a>                             
+                        </li>   
+                    </ul>
+                </div>
+                <div class="login-area col-md-2">
                         <div class="account-wrapper">
                             <img src="img/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
