--- a/Staff/staff.html
+++ b/Staff/staff.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="webfonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
@@ -28,38 +29,29 @@
         <div class="container-fluid  p-4">
             <div class="row align-items-center">
                 <div class="col-md-1"></div>
-                <div class="col-md-2 px-5 py-1">
+                <div class="col-md-2 py-1">
                     <a href="" class = "navbar-brand">
                         <img src="img/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-7"></div>
-                <!-- <div class="col-md-7">
+                <div class="col-md-7">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
-                            <a href="index.html">
+                            <a href="staff.html">
                                 Trang chủ
                                 <i class="ti-angle-down down-btn"></i>
                             </a>                             
                         </li>
+
                         <li class="list-group-item movie-area">
-                            <a href="">
-                                Đơn hàng
+                            <a href="staffProfile.html">
+                                Tài khoản
                                 <i class="ti-angle-down down-btn"></i>
                             </a>                             
                         </li>   
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Thống kê
-                                <i class="ti-angle-down down-btn"></i>
-                            </a>  
-                        </li>   
                     </ul>
-                </div> -->
+                </div>
                 <div class="login-area col-md-2">
-                    <button class="search-btn btn">
-                        <i class="search-icon ti-search"></i>
-                    </button>
                         <div class="account-wrapper">
                             <img src="img/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
@@ -75,29 +67,30 @@
         </div>
     </div>
     <div class="line-default"></div>
-    <div class="container wrapper">
+    <div class="container-fluid wrapper">
         <div class="wrapper-content">
+           
+            <div class="qrcode">
+                <div id="qr-result">
+                    <h1 class = "scan-title">Scan QR</h1>
+                    <div style="display: flex; justify-content: center;">
+                        <div id="qr-reader" style="width: 500px;"></div>
+                    </div>
+                </div>
+            </div>
             <div class="getdate">
-                <div class="search-content-item">
-                    <input id="myID" placeholder="Nhập mã">
+                <div class="input-box">
+                    <input type="text" placeholder="Tìm kiếm...">
+                    <span class="icon">
+                        <i class="uil uil-search search-icon"></i>
+                    </span>
+                    <i class="uil uil-times close-icon"></i>
                 </div>
                 <button class="report-btn">
                     Tìm kiếm
                 </button>
-                <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">Quét mã QR
-                </button>
-                <div class="modal" id = "qr-scan">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div id="qr-result">
-                                <h1 class = "scan-title">Scan QR</h1>
-                                <div style="display: flex; justify-content: center;">
-                                    <div id="qr-reader" style="width: 500px;"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">Quét mã QR
+                </button> -->   
             </div>
             <div class="list-report">
                 <ul class="list">
@@ -260,6 +253,13 @@
             );
             html5QrcodeScanner.render(onScanSuccess);
         });
+    </script>
+    <script>
+        let inputBox = document.querySelector(".input-box"),
+            searchIcon = document.querySelector(".icon"),
+            closeIcon = document.querySelector(".close-icon");
+        searchIcon.addEventListener("click", () => inputBox.classList.add("open"));
+        closeIcon.addEventListener("click", () => inputBox.classList.remove("open"));
     </script>
 </body>
 </html>
