fixed discount, check in

--- a/Staff/staff.html
+++ b/Staff/staff.html
@@ -69,7 +69,6 @@
     <div class="line-default"></div>
     <div class="container-fluid wrapper">
         <div class="wrapper-content">
-           
             <div class="qrcode">
                 <div id="qr-result">
                     <h1 class = "scan-title">Scan QR</h1>
@@ -89,8 +88,8 @@
                 <button class="report-btn">
                     Tìm kiếm
                 </button>
-                <!-- <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">Quét mã QR
-                </button> -->   
+                 <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">Quét mã QR
+                </button>    
             </div>
             <div class="list-report">
                 <ul class="list">
